<resources>
    <string name="good">good</string>
    <string name="content_description_end_icon">How are you</string>
    <string name="contact">contact</string>
    <string name="email">email</string>
    <string name="button">Next</string>
    <string name="button_tiime_picker">Button</string>
    <string name="label_date">label</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="check_in_date">Check-in date</string>
    <string name="check_out_date">Check-out date</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="Registration" />

    <!--OYC-->
    <string name="app_name">Assignment</string>
    <string name="close_button">Close Button</string>
    <string name="reservation">Reservation</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="btndatein">Check-In Date</string>
    <string name="btndateout">Check-Out Date</string>
    <string name="rooms">Rooms</string>
    <string name="adults">Adults</string>
    <string name="child">Children</string>
    <string name="search">SEARCH</string>
    <string name="txtdatein">Date</string>
    <string name="txtdateout">Date</string>
    <string name="txtdayin">Year</string>
    <string name="txtdayout">Year</string>
    <string name="txtmonthin">Month</string>
    <string name="txtmonthout">Month</string>


</resources>